c2/freenodes
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/freenodes/src/proof.c:549:6: error: expected expression
if ( struct node ) 
     ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/freenodes/src/obj/proof.o] Error 1
